fixed text alignment, padding and margin adjustments

--- a/Above All Beauty/Content/BootstrapOverwrite.css
+++ b/Above All Beauty/Content/BootstrapOverwrite.css
@@ -1,5 +1,5 @@
 ﻿.navbar-inverse{
-    background-color: #94618E;
+    background-color: rgba(148, 97, 142,1);
 }
 
 .navbar-nav > li {
